--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     我们正在使用 Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     和 Electron <span id="electron-version"></span>.
+
+    <h1>欢迎使用！！！</h1>
+    <h3>这是v1.0.4</h3>
   </body>
   <script src="./renderer.js"></script>
 </html>
