wantwant客户端初步完成

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <!-- https://developer.mozilla.org/zh-CN/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>你好!</title>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self'"
+    />
+    <title>旺旺集团一站式服务平台</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>你好!</h1>
-    我们正在使用 Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    和 Electron <span id="electron-version"></span>.
-
-    <h1>欢迎使用！！！</h1>
-    <h3>这是v1.0.4</h3>
+    <div class="app-container">
+      <img src="./static/home.png" alt="" class="app-image" />
+    </div>
   </body>
   <script src="./renderer.js"></script>
 </html>
